# law_news_c_v2

./: .env.example  .gitignore  Justfile  PRD.local_me.md  PRD.md  README.md  client_report.md  pyproject.toml  기능명세서.md
.claude/: settings.local.json
backend/: SKILL_v2.md  requirements.txt
backend/analyses/: ANALYSES_A_TO_Z.md  admin.py  export.py  models.py  prompts.py  serializers.py  tasks.py  urls.py  validators.py  views.py
backend/analyses/migrations/: 0001_initial.py  0002_analysis_is_relevant.py  0003_add_review_fields.py  0003_analysis_numeric_sort_fields.py  0004_backfill_numeric_fields.py  0005_merge_20260226_1131.py  0006_add_casegroup_review_fields.py  0007_backfill_casegroup_review.py  0008_alter_casegroup_case_id.py  0009_casegroup_name_index_llm_model_default.py
backend/articles/: admin.py  apps.py  crawlers.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/articles/migrations/: 0001_initial.py
backend/articles/services/: __init__.py  scheduler.py
backend/config/: settings.py  urls.py
backend/scheduler/: apps.py  scheduler.py
docs/: CHANGELOG_2026_02_27.md  DASHBOARD_REALTIME.md  FUNCTIONAL_SPEC.md  PDF_REPORT.md  PRD.md  PRIORITY_SORT.md  README.md  notion.md  portfolio.html
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: AiSuitabilityDisplay.tsx  ClientSuitabilityButtons.tsx  StageBadge.tsx  StatsCard.tsx  SuitabilityBadge.tsx  TableSkeleton.tsx  (+2 more)
scripts/: analyze_now.py  crawl_now.py  export_excel.py  pipeline.py  reanalyze.py  reset_db.py  show_stats.py
(+13 files in other folders)
